--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev-test": "./node_modules/.bin/karma start ./config/karma.dev.js --singleRun false --debug true",
     "postinstall": "lerna bootstrap",
     "build": "webpack --config ./config/webpack.config.prod.js --release true",
+    "deploy": "git-directory-deploy --directory packages/react-data-grid --branch react-data-grid",
     "dev-server": "node webpack-dev-server.js",
     "beforepublish": "lerna run beforepublish",
     "eslint": "./node_modules/.bin/eslint -f unix packages/react-data-grid/src/** packages/react-data-grid-addons/src/**"
@@ -60,8 +61,10 @@
     "eslint": "^1.10.3",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.15.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.0.1",
     "gh-pages": "^0.2.0",
+    "git-directory-deploy": "^1.5.1",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.3.4",
     "gulp-util": "^3.0.0",
@@ -77,11 +80,11 @@
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-matchers": "^0.1.3",
     "karma-junit-reporter": "^0.2.2",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-phantomjs-launcher-nonet": "^0.1.3",
-    "karma-webpack": "^1.7.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-mocha-reporter": "^2.2.3",
+    "karma-webpack": "^1.7.0",
     "lerna": "2.0.0-beta.34",
     "minimist": "^1.1.0",
     "mkdirp": "^0.5.1",
